--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(StellarTrace main.cpp
         Jsonnormalization.cpp
         include/Lexicon.hpp
-        include/Lexiconfolder.hpp)
+        include/Lexiconfolder.hpp
+        include/ForwardIndex.hpp)
 
 # Include path for json.hpp
 target_include_directories(StellarTrace PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/external/json/single_include/nlohmann)
