--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,11 @@ add_executable(StellarTrace main.cpp
         Jsonnormalization.cpp
         include/Lexicon.hpp
         include/Lexiconfolder.hpp
-        include/ForwardIndex.hpp)
+        include/ForwardIndex.hpp
+        include/astronomicalunitc.hpp
+        include/InvertedIndex.hpp
+        include/SearchEngine.hpp
+        include/external/httplib.h)
 
 # Include path for json.hpp
 target_include_directories(StellarTrace PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/external/json/single_include/nlohmann)
